--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Retro Fight - Air Hockey</title>
+    <title>Fun Game</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <style>
@@ -65,7 +65,7 @@
         }
         .hidden { display: none !important; }
         canvas { cursor: none; touch-action: none; max-width: 100%; height: auto; }
-        input[type=range] { -webkit-appearance: none; background: #222; height: 8px; border-radius: 5px; }
+        input[type=range] { appearance: none; -webkit-appearance: none; background: #222; height: 8px; border-radius: 5px; }
         input[type=range]::-webkit-slider-thumb { -webkit-appearance: none; height: 20px; width: 20px; background: var(--neon-blue); cursor: pointer; border-radius: 0; box-shadow: 0 0 10px var(--neon-blue); }
         .signature-mark {
             color: #52525b;
@@ -155,8 +155,11 @@
             </div>
             <div id="gameOverOverlay" class="hidden absolute inset-0 bg-black/90 backdrop-blur-md flex flex-col items-center justify-center z-30">
                 <h2 id="win-message" class="text-white text-7xl font-black italic mb-6 uppercase">YOU WIN</h2>
-                <button onclick="requestSystemExit()" class="border-4 border-white bg-black text-white px-12 py-3 text-2xl hover:bg-white hover:text-black transition-all mb-8 uppercase">SHUTDOWN SYSTEM</button>
-                <div class="signature-mark text-lg">PRODUCED BY ASHMIT KHATUA</div>
+                <div class="flex gap-6">
+                    <button onclick="returnToMenu()" class="border-4 border-cyan-500 bg-black text-cyan-500 px-8 py-3 text-2xl hover:bg-cyan-500 hover:text-black transition-all uppercase font-bold">MAIN MENU</button>
+                    <button onclick="requestSystemExit()" class="border-4 border-red-600 bg-black text-red-600 px-8 py-3 text-2xl hover:bg-red-600 hover:text-black transition-all uppercase font-bold">EXIT MATCH</button>
+                </div>
+                <div class="mt-8 signature-mark text-lg">PRODUCED BY ASHMIT KHATUA</div>
             </div>
         </div>
     </div>
@@ -237,6 +240,15 @@
             document.getElementById('league-title').innerText = league;
         }
         function backToMain() { document.getElementById('sub-menu').classList.add('hidden'); document.getElementById('main-menu').classList.remove('hidden'); }
+        
+        function returnToMenu() {
+            gameActive = false;
+            document.getElementById('game-ui').classList.add('hidden');
+            document.getElementById('gameOverOverlay').classList.add('hidden');
+            document.getElementById('main-menu').classList.remove('hidden');
+            Sound.play(600, 'sine', 0.05, 0.1);
+        }
+
         function startGame(speed, power) {
             Sound.init();
             aiBaseSpeed = speed; aiPower = power;
@@ -311,21 +323,17 @@
                 else if (!document.getElementById('exit-confirm-overlay').classList.contains('hidden')) cancelSystemExit();
             }
         });
-
-        // MOUSE CONTROL
         canvas.addEventListener("mousemove", (e) => {
             let rect = canvas.getBoundingClientRect();
             mouseX = (e.clientX - rect.left) * (canvas.width / rect.width);
             mouseY = (e.clientY - rect.top) * (canvas.height / rect.height);
         });
-
-        // TOUCH CONTROL (MOBILE)
         canvas.addEventListener("touchstart", handleTouch, { passive: false });
         canvas.addEventListener("touchmove", handleTouch, { passive: false });
 
         function handleTouch(e) {
             e.preventDefault(); 
-            Sound.init(); // Initialize sound on first touch
+            Sound.init(); 
             let touch = e.touches[0];
             let rect = canvas.getBoundingClientRect();
             mouseX = (touch.clientX - rect.left) * (canvas.width / rect.width);
